nginx/ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /[a-zA-Z0-9]{7}/?$
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /api/
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /api-token-auth/
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 5000
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
